fixed shadow on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,12 +42,16 @@ body {
   transition: all 100ms;
 }
 
+
 .list-shadow {
-  box-shadow: 0px 0px 0px 0px theme('colors.fg');
+  box-shadow: 0px 0px 0px 0px theme('colors.fg');  /* Adjust the color variable as needed */
   transition: all 100ms;
 }
 
-.list-shadow:hover {
-  box-shadow: 0px 0px 15px 0px theme('colors.fg');
-  transition: all 100ms;
+/* Media query for non-mobile devices */
+@media (min-width: 769px) {
+  .list-shadow:hover {
+    box-shadow: 0px 0px 15px 0px theme('colors.fg');  /* Adjust the color variable as needed */
+    transition: all 100ms;
+  }
 }
